# rayfin-fabricator

./: .gitignore  .prettierignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  deploy.ps1  electron-builder.yml  electron.vite.config.ts  eslint.config.mjs  package-lock.json  package.json  tsconfig.node.json  tsconfig.web.json  vite.config.ts  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
analytics/: README.md  queries.kql
docs/: DEPLOY.md  VENDORED-WRY-PATCH.md
resources/: telemetry.example.json
resources/fabricator-templates/fabricator-blankapp/: README.md  package.json  rayfin-template.yml
resources/fabricator-templates/fabricator-blankapp/.agents/skills/graphein-visuals/: SKILL.md
resources/fabricator-templates/fabricator-blankapp/rayfin/: rayfin.yml
resources/fabricator-templates/fabricator-blankapp/rayfin/data/: schema.ts
resources/fabricator-templates/fabricator-blankapp/src/: main.css
resources/fabricator-templates/fabricator-blankapp/src/components/: Chart.tsx  LightPull.tsx  RayfinWordmark.tsx  useChart.ts
resources/fabricator-templates/fabricator-blankapp/src/pages/: HomePage.tsx
resources/fabricator-templates/fabricator-blankapp/src/services/: rayfinClient.ts
resources/fabricator-templates/fabricator-dataapp/: AGENTS.md  README.md  fabric.yaml  manifest.json  package-lock.json  package.json  rayfin-template.yml  vite.config.ts
resources/fabricator-templates/fabricator-dataapp/.agents/skills/app-design/: SKILL.md
resources/fabricator-templates/fabricator-dataapp/.agents/skills/build-workflow/: SKILL.md
resources/fabricator-templates/fabricator-dataapp/.agents/skills/dax/: SKILL.md
resources/fabricator-templates/fabricator-dataapp/.agents/skills/dax-authoring/: SKILL.md
resources/fabricator-templates/fabricator-dataapp/.agents/skills/dax/references/: design.md  (+2 more)
resources/fabricator-templates/fabricator-dataapp/.agents/skills/fabric-cli/: SKILL.md
resources/fabricator-templates/fabricator-dataapp/.agents/skills/fabric-data/: SKILL.md
resources/fabricator-templates/fabricator-dataapp/.agents/skills/fabric-sdk/: SKILL.md
resources/fabricator-templates/fabricator-dataapp/.agents/skills/headless-preview/: SKILL.md
resources/fabricator-templates/fabricator-dataapp/.agents/skills/match-source-report/: SKILL.md
resources/fabricator-templates/fabricator-dataapp/.agents/skills/query-design/: SKILL.md
resources/fabricator-templates/fabricator-dataapp/.agents/skills/schema-discovery/: SKILL.md
resources/fabricator-templates/fabricator-dataapp/.agents/skills/visuals/: SKILL.md
resources/fabricator-templates/fabricator-dataapp/rayfin/: rayfin.yml
resources/fabricator-templates/fabricator-dataapp/scripts/: preview-visual.mjs
resources/fabricator-templates/fabricator-dataapp/src/: App.tsx  fabric.generated.ts  global.css  main.tsx
resources/fabricator-templates/fabricator-dataapp/src/components/dashboard/: Chart.tsx  ChartCard.tsx  DataTableCard.tsx  KpiCard.tsx  selection.tsx  use-chart.ts
resources/fabricator-templates/fabricator-dataapp/src/demo/: DemoDashboard.tsx  global-development.ts
resources/fabricator-templates/fabricator-dataapp/src/gallery/: Gallery.tsx  main.tsx
resources/fabricator-templates/fabricator-dataapp/src/lib/: chartTokens.ts  graphein-theme.ts  selection-bridge.ts  to-table.ts
resources/fabricator-templates/fabricator-todoapp/: package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  state.rs  types.rs
src-tauri/src/commands/: advisor.rs  auth.rs  chat.rs  custom_skills.rs  data.rs  deploy.rs  design.rs  doctor.rs  fabric.rs  files.rs  git.rs  github.rs  misc.rs  mod.rs  projects.rs  projects_impl.rs  rayfin_version.rs  settings.rs  skills.rs  suggest.rs  threads.rs  util.rs
src-tauri/src/services/: agent_skills.rs  agent_tools.rs  copilot.rs  design_agent.js  dev_server.rs  emit.rs  env_path.rs  exec.rs  fingerprint.rs  history.rs  mod.rs  paths.rs  preview.rs  preview_diagnostics.js  semantic_model.rs  semantic_model_helper.mjs  store.rs  telemetry.rs  watchdog.rs
src/main/: index.ts  ipc.ts
src/main/services/: auth.ts  chat.ts  crashlog.ts  deploy.ts  doctor.ts  exec.ts  files.ts  history.ts  merge.ts  projects.ts  screenshot.ts  skills.ts  store.ts  telemetry.ts  threads.ts
src/preload/: index.d.ts  index.ts
src/renderer/: index.html
src/renderer/src/: App.tsx  api.ts  chatEventStore.test.tsx  chatEventStore.ts  chatPlan.test.ts  chatPlan.ts  copilotModels.ts  copilotVersion.test.ts  copilotVersion.ts  design-controller.test.ts  design-relay.test.ts  fabric-apps-unsupported-regions.json  fabric.test.ts  fabric.ts  main.tsx  monaco.ts  overlay.tsx  preview-diagnostics.test.ts  reportPages.test.ts  reportPages.ts  syntax.ts  theme.ts  toast.tsx  update.tsx  useEditorTheme.ts  webview.d.ts
src/renderer/src/assets/: main.css
src/renderer/src/components/: AdvisorView.tsx  AnnotateOverlay.tsx  ChatPanel.test.tsx  ChatPanel.tsx  CloneFromGitHubScreen.test.tsx  CloneFromGitHubScreen.tsx  CodeViewer.test.tsx  CodeViewer.tsx  ConfirmModal.tsx  CreateProgress.tsx  CreateProjectScreen.test.tsx  CreateProjectScreen.tsx  CustomSkillModal.test.tsx  CustomSkillModal.tsx  DataView.tsx  DeleteProjectModal.test.tsx  DeleteProjectModal.tsx  DeployStage.test.tsx  DeployStage.tsx  DeploymentCreateForm.test.tsx  DeploymentCreateForm.tsx  DeploymentsControl.tsx  ErrorBoundary.tsx  FabricatorMark.test.tsx  FabricatorMark.tsx  ForcedUpdateScreen.tsx  GitControl.tsx  HistoryView.tsx  HomeView.test.tsx  HomeView.tsx  ManageProjectModal.test.tsx  ManageProjectModal.tsx  Markdown.tsx  MentionText.tsx  MigratePowerBIReportModal.tsx  ModelView.test.tsx  ModelView.tsx  NewProjectModal.tsx  NewThreadModal.tsx  PlanCard.test.tsx  (+18 more)
src/renderer/src/screens/: SetupScreen.test.tsx  SetupScreen.tsx  Workbench.tsx  reportIssue.ts
src/renderer/test/: harness.tsx
src/shared/: ipc.ts
(+22 files in other folders)
