[package]
name = "rayfin-fabricator"
version = "0.4.0"
description = "Rayfin Fabricator — a desktop app for building Rayfin apps via chat, wrapping the GitHub Copilot CLI and the Rayfin CLI."
authors = ["Rayfin Fabricator"]
license = "MIT"
repository = "https://github.com/spatney/rayfin-fabricator"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
log = "0.4"

tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "sync", "time"] }
futures = "0.3"

uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
regex = "1"
once_cell = "1"
chrono = { version = "0.4", features = ["clock"], default-features = false }

reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

dirs = "5"
which = "7"
trash = "5"
thiserror = "2"
anyhow = "1"

# Windows-only: capture the native WebView2 preview to a PNG (ICoreWebView2::CapturePreview).
# webview2-com / windows versions are pinned to what the vendored wry (and tauri) resolve to,
# so Cargo unifies them rather than pulling a second copy. See services/preview.rs.
[target.'cfg(windows)'.dependencies]
webview2-com = "0.38"
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_Memory",
] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

# Vendored copy of wry 0.55.1 with a single local change: it enables the WebView2
# `AllowSingleSignOnUsingOSPrimaryAccount` environment option (see
# vendor/wry/src/webview2/mod.rs). That lets the embedded preview present the
# device's Entra identity (PRT / device certificate) to Azure AD, so deployed
# apps behind a Conditional Access "require compliant/managed device" policy can
# sign in inside the preview instead of failing with "You can't get there from
# here". Upstream wry leaves this `false` and exposes no setter, so it must be
# patched here. When bumping Tauri (which pins wry), re-vendor the matching wry
# version and re-apply the one-line change, or drop this patch if upstream adds
# the option. Full notes + upgrade steps: docs/VENDORED-WRY-PATCH.md.
[patch.crates-io]
wry = { path = "vendor/wry" }
