[package]
name = "rayfin-fabricator"
version = "0.61.1"
description = "Fabricator — a desktop app for building Rayfin apps via chat, wrapping the GitHub Copilot CLI and the Rayfin CLI."
authors = ["Fabricator"]
license = "MIT"
repository = "https://github.com/spatney/rayfin-fabricator"
edition = "2021"
# Bumped from 1.77.2 for github-copilot-sdk, which requires Rust >= 1.94 (it is an
# edition-2024 crate). This crate stays edition 2021; only the toolchain must be >= 1.94.
rust-version = "1.94"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `devtools` enables the WebView2/WebKit web inspector (and `Webview::open_devtools`)
# in RELEASE builds too, not just debug — the preview toolbar exposes a button that
# opens it so users can inspect their deployed app's DOM/console/network.
tauri = { version = "2", features = ["unstable", "devtools"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
log = "0.4"

tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "sync", "time"] }
futures = "0.3"
async-trait = "0.1"

# GitHub Copilot CLI, driven via JSON-RPC instead of the old one-shot `copilot -p`
# exec path. The default `bundled-cli` feature embeds a version-pinned Copilot CLI
# at build time (downloaded by its build.rs) and self-extracts it to
# %LOCALAPPDATA%\github-copilot-sdk\cli\<ver>\copilot.exe at runtime, so the app is
# self-contained (no separate install). Build requires network; cache via
# BUNDLED_CLI_CACHE_DIR in CI.
github-copilot-sdk = "1.0.3"

uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
regex = "1"
once_cell = "1"
chrono = { version = "0.4", features = ["clock"], default-features = false }

reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

dirs = "5"
which = "7"
trash = "5"
thiserror = "2"
anyhow = "1"

# Windows-only: capture the native WebView2 preview to a PNG (ICoreWebView2::CapturePreview).
# webview2-com / windows versions are pinned to what the vendored wry (and tauri) resolve to,
# so Cargo unifies them rather than pulling a second copy. See services/preview.rs.
[target.'cfg(windows)'.dependencies]
webview2-com = "0.38"
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_Memory",
  "Win32_System_ProcessStatus",
  "Win32_System_Threading",
] }

# macOS-only: capture the native WKWebView preview to a PNG via
# -[WKWebView takeSnapshotWithConfiguration:completionHandler:]. objc2 versions are
# pinned to what the vendored wry resolves to so Cargo unifies them. See services/preview.rs.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
block2 = "0.6"
objc2-foundation = { version = "0.3", default-features = false, features = [
  "std",
  "NSData",
  "NSDictionary",
  "NSDate",
  "NSRunLoop",
  "NSError",
] }
objc2-app-kit = { version = "0.3", default-features = false, features = [
  "std",
  "NSImage",
  "NSImageRep",
  "NSBitmapImageRep",
] }
objc2-web-kit = { version = "0.3", default-features = false, features = [
  "std",
  "block2",
  "WKWebView",
  "WKSnapshotConfiguration",
] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

# Vendored copy of wry 0.55.1 with two local changes (see
# vendor/wry/src/webview2/mod.rs):
#   1. Enables the WebView2 `AllowSingleSignOnUsingOSPrimaryAccount` environment
#      option so the embedded preview can present the device's Entra identity
#      (PRT / device certificate) to Azure AD — deployed apps behind a Conditional
#      Access "require compliant/managed device" policy then sign in inside the
#      preview instead of failing with "You can't get there from here".
#   2. Adds `CalculateNativeWinOcclusion` to the default disabled browser features
#      so WebView2 keeps rendering when the window is minimized/occluded, letting
#      the Fabricator agent screenshot the preview off-screen / while minimized.
# Both live in the shared default/environment so the main window and the preview
# keep identical options (WebView2 rejects mismatched options on a shared user-data
# folder, failing with ERROR_INVALID_STATE / 0x8007139F). Upstream wry exposes no
# setter for (1), so it must be patched here. When bumping Tauri (which pins wry),
# re-vendor the matching wry version and re-apply both changes, or drop a change if
# upstream supports it. Full notes + upgrade steps: docs/VENDORED-WRY-PATCH.md.
[patch.crates-io]
wry = { path = "vendor/wry" }
